@@ -2,7 +2,10 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 {{ $NEXT }}
 
+- Use the column accessor instead of set_column when inserting new objects
+
 2.004001  2011-08-19 16:17:53 Europe/Vienna
+
 - Changed stored_model and stored_result_source attributes to methods for
   ACCEPT_CONTEXT/Catalyst::Component::InstancePerContext compatibility
 
